--- a/src/App.css
+++ b/src/App.css
@@ -86,8 +86,8 @@ h2 {
   }
 
   .blue-btn-big {
-    width: 196px;
-    height: 46px;
+    width: 80%;
+    height: 45px;
     font-size: 13px;
     font-family: "Proxima-Nova", sans-serif;
     line-height: 2px;
