--- a/src/components/state/HomeCard/style.css
+++ b/src/components/state/HomeCard/style.css
@@ -4,20 +4,12 @@
   background: #FFFFFF;
   border-radius: 8px;
   text-align: center;
+  margin-left: 15px;
+  margin-right: 15px;
 }
 
 .HomeCard img {
-  margin-top: 4rem;
-  margin-bottom: 2rem;
-}
-
-.HomeCard h2 {
-  margin-top: -1.5rem;
-  margin-bottom: 1rem;
-}
-
-.HomeCard p {
-  margin-top: 0.5rem;
+  margin-top: 2rem;
 }
 
 .card-caption {
@@ -26,43 +18,39 @@
   font-size: 20px;
   line-height: 35px;
   width: 350px;
+  height: 150px;
   display: block;
   margin: auto;
   margin-bottom: 2rem;
 }
 
-.HomeCardLeft {
-  margin-left: 175px;
-}
 
-.HomeCardRight {
-  margin-right: 180px;
-}
-
-.HomeCardLeft img {
-  width: 390px;
-  height: 272px;
-}
-
-.HomeCardRight img {
-  width: 370px;
-  height: 275px;
-}
-
-.HomeCardRight .card-caption {
-  width: 380px;
+.section-label1 {
+  color: #B3BCC4;
+  font-family: "Proxima-Nova", sans-serif;
+  font-weight: 600;
+  font-size: 1rem;
+  letter-spacing: 5px;
+  text-transform: uppercase;
+  text-align: center;
+  margin-top: 2.5rem;
 }
 
 @media screen and (max-width: 1024px) {
   .HomeCard {
-    width: 450px;
+    width: 420px;
   }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 880px) {
   .HomeCard {
-    height: 600px;
-    width: 350px;
+    height: 640px;
+    width: 320px;
+  }
+
+  .card-caption {
+    width: 75px;
+    margin-bottom: 0.5rem
   }
 
   .HomeCard img {
@@ -85,62 +73,17 @@
   }
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 650px) {
   .HomeCard {
     height: 640px;
-    width: 400px;
-  }
-
-  .HomeCardLeft {
-    margin-left: 0px;
-  }
-
-  .HomeCardRight {
-    margin-right: 0px;
+    width: 420px;
+    margin: 30px auto;
   }
 }
 
-@media screen and (max-width: 425px) {
+@media screen and (max-width: 430px) {
   .HomeCard {
-    height: 590px;
-    width: 345px;
-  }
-}
-
-@media screen and (max-width: 320px) {
-  .HomeCard {
-    width: 275px;
-    height: 360px;
-  }
-
-  .HomeCard:first-of-type {
-    margin-left: 1px;
-  }
-
-  .HomeCard:last-of-type {
-    margin-right: 1px;
-  }
-
-  .HomeCard img {
-    width: 205px;
-    height: 158px;
-    margin-top: 1rem;
-  }
-
-  .HomeCard h2 {
-    font-size: 24px;
-    margin-top: -2.75rem;
-  }
-
-  .HomeCard p:first-of-type {
-    font-size: 13px;
-    margin-top: -0.5rem;
-  }
-
-  .HomeCard p:last-of-type {
-    width: 240px;
-    font-size: 13px;
-    line-height: 24px;
-    margin-top: -1.6rem;
+    height: 570px;
+    width: 95%
   }
 }
