--- a/src/components/pages/Home/style.css
+++ b/src/components/pages/Home/style.css
@@ -9,7 +9,7 @@
 .north-star-title {
   width: 100%;
   height: 16px;
-  font-family: "Proxima-Nova", sans-serif;
+  font-family: "Proxima Nova", sans-serif;
   font-size: 16px;
   font-weight: 600;
   text-transform: uppercase;
@@ -60,7 +60,7 @@
 .home-blue-text {
   width: 800px;
   height: 122px;
-  font-family: "Proxima-Nova", sans-serif;
+  font-family: "Proxima Nova", sans-serif;
   font-size: 34.6px;
   line-height: 1.76;
   color: #ffffff;
@@ -89,14 +89,6 @@
 }
 
 @media screen and (max-width: 1024px) {
-  .design-leaders-img {
-    position: absolute;
-    top: 1050px;
-    left: -2rem;
-  }
-}
-
-@media screen and (max-width: 768px) {
   .north-star-title {
     margin-left: -3.5rem;
   }
@@ -145,12 +137,9 @@
     margin-left: -17.5rem;
   }
 
-  .home-blue-section {
-    height: 350px;
-  }
 
   .home-blue-text {
-    width: 450px;
+    width: 100%;
     font-size: 28px;
     margin-top: -6rem;
   }
@@ -166,10 +155,76 @@
                     margin: auto;
 
   }
+
+  .north-star-title {
+    margin-top: 1.5rem;
+    margin-left: -0.5rem;
+  }
+
+  .main-title-leader {
+    width: 258px;
+    height: 82px;
+    font-size: 34px;
+    line-height: normal;
+    margin-top: 1rem;
+    margin-left: -0.5rem;
+  }
+
+  .home-landing-image {
+    display: none;
+  }
+
+  .mobile-landing-image {
+    z-index: -99;
+    width: 100%;
+    height: 305px;
+    display: block;
+    grid-column: 1/1;
+    grid-row: 4/7;
+    margin-top: 7rem;
+  }
+
+  .home-landing-container .journey-button {
+    z-index: 5;
+    margin-top: 35rem;
+    margin-left: -0.2rem;
+  }
+
+  .journey-button {
+    display: none;
+  }
+
+  .home-blue-section {
+    margin-top: -11.5rem;
+    height: 280px;
+    width: 100%;
+    background-color: #008ed4;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+
+  .home-blue-text {
+    width: 260px;
+    height: 206px;
+    font-family: "Proxima Nova", sans-serif;
+    font-size: 18px;
+    line-height: 33px;
+    color: #ffffff;
+    text-align: left;
+    margin-top: 3rem;
+  }
 }
 
 
-@media screen and (max-width: 425px) {
+
+/* @media screen and (max-width: 425px) {
   .main-title-leader, .north-star-title, .journey-button {
     margin-left: -2rem;
   }
@@ -225,68 +280,5 @@
 }
 
 @media screen and (max-width: 320px) {
-  .north-star-title {
-    margin-top: 1.5rem;
-    margin-left: -0.5rem;
-  }
 
-  .main-title-leader {
-    width: 258px;
-    height: 82px;
-    font-size: 34px;
-    line-height: normal;
-    margin-top: 1rem;
-    margin-left: -0.5rem;
-  }
-
-  .home-landing-image {
-    display: none;
-  }
-
-  .mobile-landing-image {
-    z-index: -99;
-    width: 320px;
-    height: 305px;
-    display: block;
-    grid-column: 1/1;
-    grid-row: 4/7;
-    margin-top: 7rem;
-    margin-left: 2rem;
-  }
-
-  .home-landing-container .journey-button {
-    z-index: 5;
-    margin-top: 35rem;
-    margin-left: -0.2rem;
-  }
-
-  .journey-button {
-    display: none;
-  }
-  .home-blue-section {
-    margin-top: -11.5rem;
-    height: 280px;
-    width: 100%;
-    background-color: #008ed4;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-  }
-
-  .home-blue-text {
-    width: 260px;
-    height: 206px;
-    font-family: "Proxima-Nova", sans-serif;
-    font-size: 18px;
-    line-height: 33px;
-    color: #ffffff;
-    text-align: left;
-    margin-top: 3rem;
-  }
-}
+} */
