--- a/src/components/state/HomeCard/style.css
+++ b/src/components/state/HomeCard/style.css
@@ -14,7 +14,7 @@
 
 .card-caption {
   color: #3B3E42;
-  font-family: "Proxima-Nova", sans-serif;
+  font-family: "Proxima Nova", sans-serif;
   font-size: 20px;
   line-height: 35px;
   width: 350px;
@@ -27,7 +27,7 @@
 
 .section-label1 {
   color: #B3BCC4;
-  font-family: "Proxima-Nova", sans-serif;
+  font-family: "Proxima Nova", sans-serif;
   font-weight: 600;
   font-size: 1rem;
   letter-spacing: 5px;
