--- a/src/components/pages/Community/style.css
+++ b/src/components/pages/Community/style.css
@@ -53,7 +53,7 @@
 .section-toggle {
   width: 33.3%;
   font-size: 1rem;
-  font-family: "Proxima-Nova", sans-serif;
+  font-family: "Proxima Nova", sans-serif;
   font-weight: 600;
   background: transparent;
   border: none;
