--- a/src/components/state/Footer/style.css
+++ b/src/components/state/Footer/style.css
@@ -20,7 +20,7 @@ footer {
 }
 
 .footer-follow h4, .footer-explore h4 {
-  font-family: "Proxima-Nova", sans-serif;
+  font-family: "Proxima Nova", sans-serif;
   line-height: normal;
   font-size: 16px;
   letter-spacing: 0.05em;
@@ -40,7 +40,7 @@ footer {
 }
 
 .footer-community p, .footer-work p, .footer-explore-container p {
-  font-family: "Proxima-Nova", sans-serif;
+  font-family: "Proxima Nova", sans-serif;
   line-height: normal;
   font-size: 16px;
   text-align: center;
@@ -50,7 +50,7 @@ footer {
 
 .footer-community ul, .footer-work ul, .footer-community li, .footer-work li {
   list-style: none;
-  font-family: "Proxima-Nova", sans-serif;
+  font-family: "Proxima Nova", sans-serif;
   line-height: 16px;
   font-size: 12px;
   padding: 0;
@@ -90,7 +90,7 @@ footer {
 .footer-credits p {
   text-align: center;
   margin: 0;
-  font-family: "Proxima-Nova", sans-serif;
+  font-family: "Proxima Nova", sans-serif;
   line-height: 19px;
   font-size: 14px;
   color: #BDBDBD;
