--- a/src/components/stateless/Author/style.css
+++ b/src/components/stateless/Author/style.css
@@ -8,7 +8,7 @@
 
 .AuthorName {
   color: #000000;
-  font-family: "Proxima-Nova", sans-serif;
+  font-family: "Proxima Nova", sans-serif;
   font-size: 1rem;
   line-height: 28px;
   margin-left: 3rem;
