Fixed images in work

--- a/src/components/stateless/Services/style.css
+++ b/src/components/stateless/Services/style.css
@@ -8,3 +8,9 @@
 .services h2 {
   margin-bottom: 8rem;
 }
+
+@media screen and (max-width: 768px) {
+  .services h2 {
+    margin-bottom: 60px;
+  }
+}
