--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,10 @@ h2 {
   margin: -1rem auto 1.5rem auto;
 }
 
+@media screen and (max-width: 768px) {
+  h2 {margin-bottom: 60px;}
+}
+
 .section-label {
   color: #B3BCC4;
   font-family: "Proxima Nova", sans-serif;
