--- a/src/components/state/Process/style.css
+++ b/src/components/state/Process/style.css
@@ -35,7 +35,7 @@
 #008ED4 */
 
 .processImage {
-  width: 95%;
+  width: 90%;
   height: 540px;
 }
 
@@ -68,11 +68,26 @@
   }
 }
 @media screen and (max-width: 768px) {
+  #process, .headers {
+    margin: 0 !important;
+    padding: 0 !important;
+  }
+
+  .process {
+    padding: 0;
+    width: 75%;
+    margin: auto;
+    padding-bottom: 7.5rem;
+  }
+
+
   .processImage {
     height: 320px;
+    margin-bottom: 0 !important;
   }
 
   .MethodBlock {
+    margin-top: 30px !important;
     text-align: center;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
@@ -91,6 +106,10 @@
   }
   .processImage {
     height: 270px;
+  }
+
+  .method-subheader {
+    width: 100%;
   }
 }
 
