--- a/src/components/pages/About/style.css
+++ b/src/components/pages/About/style.css
@@ -9,7 +9,7 @@
 }
 
 .about-uxsociety {
-  margin: auto 0;
+  margin: auto 60px;
 }
 
 .about-ux img {
@@ -86,6 +86,10 @@
     width: 80%;
     margin: auto;
     margin-top: 60px;
+  }
+
+  .about-uxsociety {
+    margin: auto;
   }
 
   .about-box {
