--- a/src/components/state/HomeCard/style.css
+++ b/src/components/state/HomeCard/style.css
@@ -79,6 +79,14 @@
     width: 420px;
     margin: 30px auto;
   }
+
+  .HomeCard img {
+    width: 80%;
+    height: 200px;
+    margin-top: 3rem;
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
 
 @media screen and (max-width: 430px) {
