--- a/src/components/state/Footer/style.css
+++ b/src/components/state/Footer/style.css
@@ -87,6 +87,9 @@ footer {
   justify-content: space-between;
 }
 
+.footer-icons img {
+  margin: 0 8px;
+}
 .footer-credits p {
   text-align: center;
   margin: 0;
@@ -96,13 +99,13 @@ footer {
   color: #BDBDBD;
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1280px) {
   footer {
     padding: 10em 3em 2.5em 3em;
   }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1000px) {
   footer {
     padding: 10em 3em 2.5em 2em;
   }
@@ -122,7 +125,7 @@ footer {
   }
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 740px) {
   footer {
     padding: 3em 2em 1.75em 2em;
   }
@@ -151,7 +154,7 @@ footer {
   }
 }
 
-@media screen and (max-width: 375px) {
+@media screen and (max-width: 415px) {
   footer {
     padding: 3em 1em 1.75em 1em;
   }
@@ -165,7 +168,7 @@ footer {
   }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 340px) {
   .footer-logo img {
     width: 82px;
     height: 33px;
@@ -178,5 +181,9 @@ footer {
   .footer-icons img {
     width: 17px;
     height: 17px;
+  }
+
+  .footer-credits p {
+    font-size: 12px
   }
 }
