--- a/src/components/pages/About/style.css
+++ b/src/components/pages/About/style.css
@@ -21,7 +21,7 @@
 
 .about-uxsociety h2 {
   margin-left: 45px;
-  font-family: Rubik, sans-serif;
+  font-family: 'Rubik', sans-serif;
   font-style: normal;
   font-weight: 500;
   line-height: normal;
@@ -60,7 +60,7 @@
 }
 
 .about-CoreValues h1 {
-  font-family: Rubik, sans-serif;
+  font-family: 'Rubik', sans-serif;
   font-style: normal;
   font-weight: 500;
   line-height: normal;
