--- a/src/components/state/MemberStoryComp/style.css
+++ b/src/components/state/MemberStoryComp/style.css
@@ -21,7 +21,7 @@
 }
 
 .storyTitle{
-    font-family: Rubik;
+    font-family: 'Rubik';
     line-height: 60px;
     font-size: 50.97px;
     color: #20252B;
