--- a/src/components/state/MostPopularPodcast/style.css
+++ b/src/components/state/MostPopularPodcast/style.css
@@ -9,7 +9,7 @@
     font-size: 24px;
     line-height: 28px;
     color: black;
-    font-family: Rubik;
+    font-family: 'Rubik';
     font-weight: 570;
     letter-spacing: 0.1ch;
 
