--- a/src/components/state/Footer/style.css
+++ b/src/components/state/Footer/style.css
@@ -138,6 +138,7 @@ footer {
     display: none;
   }
 
+
   .footer-follow {
     border: none;
     padding-left: 0px;
@@ -161,6 +162,7 @@ footer {
 
   .footer-follow {
     margin-top: -0.25rem;
+    width: 50%;
   }
 
   .footer-credits {
