--- a/src/components/state/Process/style.css
+++ b/src/components/state/Process/style.css
@@ -113,7 +113,7 @@
   .method-title {
     line-height: 36px;
   }
-  
+
   .processImage {
     width: 370px;
     height: 220px;
@@ -126,7 +126,7 @@
 
 @media screen and (max-width: 420px) {
   .method-title {
-    margin-bottom: 0;
+    margin-bottom: 30px !important;
   }
 
   .processImage {
