New Events: UXUni and UXCrawl

--- a/src/components/pages/About/style.css
+++ b/src/components/pages/About/style.css
@@ -18,7 +18,6 @@
   margin-top: 120px;
 }
 
-
 .about-uxsociety h2 {
   margin-left: 45px;
   font-family: 'Rubik', sans-serif;
@@ -67,6 +66,7 @@
   font-size: 36px;
   text-align: center;
   color: #20252B;
+  margin-bottom: 60px;
 }
 
 
